--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,49 @@
----
----
+@ARTICLE{2024ApJ...975..267B,
+       author = {{Bij}, Akanksha and {Fissel}, Laura M. and {Bonne}, Lars and {Schneider}, Nicola and {Berthoud}, Marc and {Lee}, Dennis and {Novak}, Giles A. and {Sadavoy}, Sarah I. and {Pillai}, Thushara G.~S. and {Cunningham}, Maria and {Jones}, Paul and {Simon}, Robert},
+        title = "{Magnetic Field Alignment Relative to Multiple Tracers in the High-mass Star-forming Region RCW 36}",
+      journal = {The Astrophysical Journal},
+     keywords = {Star formation, Star forming regions, Interstellar medium, Interstellar magnetic fields, H II regions, Photodissociation regions, Molecular clouds, 1569, 1565, 847, 845, 694, 1223, 1072, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2024,
+        month = nov,
+       volume = {975},
+       number = {2},
+          eid = {267},
+        pages = {267},
+     abstract = "{We use polarization data from SOFIA HAWC+ to investigate the interplay
+        between magnetic fields and stellar feedback in altering gas
+        dynamics within the high-mass star-forming region RCW 36,
+        located in Vela C. This region is of particular interest as it
+        has a bipolar H II region powered by a massive star cluster,
+        which may be impacting the surrounding magnetic field. To
+        determine if this is the case, we apply the histogram of
+        relative orientations (HRO) method to quantify the relative
+        alignment between the inferred magnetic field and elongated
+        structures observed in several data sets such as dust emission,
+        column density, temperature, and spectral line intensity maps.
+        The HRO results indicate a bimodal alignment trend, where
+        structures observed with dense gas tracers show a statistically
+        significant preference for perpendicular alignment relative to
+        the magnetic field, while structures probed by the
+        photodissociation region (PDR) tracers tend to align
+        preferentially parallel relative to the magnetic field.
+        Moreover, the dense gas and PDR associated structures are found
+        to be kinematically distinct such that a bimodal alignment trend
+        is also observed as a function of line-of-sight velocity. This
+        suggests that the magnetic field may have been dynamically
+        important and set a preferred direction of gas flow at the time
+        that RCW 36 formed, resulting in a dense ridge developing
+        perpendicular to the magnetic field. However, on filament scales
+        near the PDR region, feedback may be energetically dominating
+        the magnetic field, warping its geometry and the associated
+        flux-frozen gas structures, causing the observed preference for
+        parallel relative alignment.}",
+          doi = {10.3847/1538-4357/ad77c7},
+archivePrefix = {arXiv},
+       eprint = {2409.03558},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...975..267B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @ARTICLE{2025arXiv250811746L,
        author = {{Lee}, Dennis and {Hensley}, Brandon S. and {Chang}, Tzu-Ching and {Dor{\'e}}, Olivier},
@@ -41,43 +85,48 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
-@ARTICLE{2025ApJ...981..132C,
-       author = {{Cox}, Erin G. and {Novak}, Giles and {Chuss}, David T. and {Lee}, Dennis and {Berthoud}, Marc and {Karpovich}, Kaitlyn and {Michail}, Joseph M. and {Li}, Zhi-Yun and {Ashton}, Peter C.},
-        title = "{SOFIA Polarization Spectrum of Three Star-forming Clouds}",
+@ARTICLE{2024ApJ...968..101E,
+       author = {{Encalada}, Frankie J. and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Cox}, Erin G. and {Pereira-Santos}, Fabio and {Lee}, Dennis and {Harrison}, Rachel and {Pattle}, Kate},
+        title = "{Magnetic Fields Observed along the East{\textendash}West Outflow of IRAS 16293-2422}",
       journal = {The Astrophysical Journal},
-     keywords = {Star formation, Star forming regions, Far infrared astronomy, Polarimetry, Interstellar magnetic fields, Protostars, Young stellar objects, 1569, 1565, 529, 1278, 845, 1302, 1834},
-         year = 2025,
-        month = mar,
-       volume = {981},
-       number = {2},
-          eid = {132},
-        pages = {132},
-          doi = {10.3847/1538-4357/ada447},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...981..132C},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{2024ApJ...975..267B,
-       author = {{Bij}, Akanksha and {Fissel}, Laura M. and {Bonne}, Lars and {Schneider}, Nicola and {Berthoud}, Marc and {Lee}, Dennis and {Novak}, Giles A. and {Sadavoy}, Sarah I. and {Pillai}, Thushara G.~S. and {Cunningham}, Maria and {Jones}, Paul and {Simon}, Robert},
-        title = "{Magnetic Field Alignment Relative to Multiple Tracers in the High-mass Star-forming Region RCW 36}",
-      journal = {The Astrophysical Journal},
-     keywords = {Star formation, Star forming regions, Interstellar medium, Interstellar magnetic fields, H II regions, Photodissociation regions, Molecular clouds, 1569, 1565, 847, 845, 694, 1223, 1072, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+     keywords = {Young stellar objects, 1834, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
          year = 2024,
-        month = nov,
-       volume = {975},
+        month = jun,
+       volume = {968},
        number = {2},
-          eid = {267},
-        pages = {267},
-          doi = {10.3847/1538-4357/ad77c7},
+          eid = {101},
+        pages = {101},
+     abstract = "{Magnetic fields likely play an important role in the formation of young
+        protostars. Multiscale and multiwavelength dust polarization
+        observations can reveal the inferred magnetic field from scales
+        of the cloud to core to protostar. We present continuum
+        polarization observations of the young protostellar triple
+        system IRAS 16293-2422 at 89 {\ensuremath{\mu}}m using HAWC+ on
+        SOFIA. The inferred magnetic field is very uniform with an
+        average field angle of 89{\textdegree} {\ensuremath{\pm}}
+        23{\textdegree} (E of N), which is different from the
+        {\ensuremath{\sim}}170{\textdegree} field morphology seen at 850
+        {\ensuremath{\mu}}m at larger scales ({\ensuremath{\gtrsim}}2000
+        au) with JCMT POL-2 and at 1.3 mm on smaller scales
+        ({\ensuremath{\lesssim}}300 au) with Atacama Large
+        Millimeter/submillimeter Array. The HAWC+ magnetic field
+        direction is aligned with the known E-W outflow. This alignment
+        difference suggests that the shorter wavelength HAWC+ data is
+        tracing the magnetic field associated with warmer dust likely
+        from the outflow cavity, whereas the longer wavelength data are
+        tracing the bulk magnetic field from cooler dust. Also, we show
+        in this source the dust emission peak is strongly affected by
+        the observing wavelength. The dust continuum peaks closer to
+        source B (northern source) at shorter wavelengths and
+        progressively moves toward the southern A source with increasing
+        wavelength (from 22 to 850 {\ensuremath{\mu}}m).}",
+          doi = {10.3847/1538-4357/ad4968},
 archivePrefix = {arXiv},
-       eprint = {2409.03558},
- primaryClass = {astro-ph.GA},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...975..267B},
+       eprint = {2405.08118},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...968..101E},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 
 @ARTICLE{2024ApJ...972..102L,
        author = {{Lee}, Dennis and {Chen}, Che-Yu and {Novak}, Giles and {Chuss}, David T. and {Cox}, Erin G. and {Karpovich}, Kaitlyn and {Ashton}, Peter and {Berthoud}, Marc and {Li}, Zhi-Yun and {Michail}, Joseph M.},
@@ -90,79 +139,30 @@ archivePrefix = {arXiv},
        number = {1},
           eid = {102},
         pages = {102},
+     abstract = "{The polarization spectrum, or wavelength dependence of the polarization
+        fraction, of interstellar dust emission provides important
+        insights into the grain alignment mechanism of interstellar dust
+        grains. We investigate the far-infrared polarization spectrum of
+        a realistic simulated high-mass star-forming cloud under various
+        models of grain alignment and emission. We find that neither a
+        homogeneous grain alignment model nor a grain alignment model
+        that includes collisional dealignment is able to produce the
+        falling spectrum seen in observations. On the other hand, we
+        find that a grain alignment model with grain alignment
+        efficiency dependent on local temperature is capable of
+        producing a falling spectrum that is in qualitative agreement
+        with observations of OMC-1. For the model most in agreement with
+        OMC-1, we find no correlation between the temperature and the
+        slope of the polarization spectrum. However, we do find a
+        positive correlation between the column density and the slope of
+        the polarization spectrum. We suggest this latter correlation to
+        be the result of wavelength-dependent polarization by
+        absorption.}",
           doi = {10.3847/1538-4357/ad631c},
 archivePrefix = {arXiv},
        eprint = {2407.12917},
  primaryClass = {astro-ph.GA},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...972..102L},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-
-@ARTICLE{2024ApJ...968..101E,
-       author = {{Encalada}, Frankie J. and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Cox}, Erin G. and {Pereira-Santos}, Fabio and {Lee}, Dennis and {Harrison}, Rachel and {Pattle}, Kate},
-        title = "{Magnetic Fields Observed along the East{\textendash}West Outflow of IRAS 16293-2422}",
-      journal = {The Astrophysical Journal},
-     keywords = {Young stellar objects, 1834, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
-         year = 2024,
-        month = jun,
-       volume = {968},
-       number = {2},
-          eid = {101},
-        pages = {101},
-          doi = {10.3847/1538-4357/ad4968},
-archivePrefix = {arXiv},
-       eprint = {2405.08118},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...968..101E},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@INPROCEEDINGS{2022SPIE12189E..1HM,
-       author = {{McCrackan}, Michael and {Ma}, Zhiyuan and {DeNigris}, Nat S. and {Ryan}, Caleigh and {Souccar}, Kamal and {Wilson}, Grant W. and {Aretxaga}, Itziar and {Bij}, Akanksha and {Fissel}, Laura and {Golec}, Joseph E. and {Gutermuth}, Robert and {Lee}, Dennis and {Novak}, Giles and {Thiel}, Felix and {Walker}, Samantha and {Zaragoza-Cardiel}, Javier},
-        title = "{The TolTEC camera: the citlali data reduction pipeline engine}",
-    booktitle = {Software and Cyberinfrastructure for Astronomy VII},
-         year = 2022,
-       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
-       volume = {12189},
-        month = aug,
-          eid = {121891H},
-        pages = {121891H},
-          doi = {10.1117/12.2629095},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12189E..1HM},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@INPROCEEDINGS{2022SPIE12190E..1OL,
-       author = {{Lee}, Dennis and {Novak}, Giles and {Berthoud}, Marc and {Bussan}, John and {Golenia}, Robert and {Van Clepper}, Eric and {Wilson}, Grant and {DeNigris}, N.~S. and {Ma}, Zhiyuan and {McCrackan}, Michael and {Souccar}, Kamal and {Fissel}, Laura and {Bij}, Akanksha and {Thiel}, Felix and {Aretxaga}, Itziar and {Ferrusca}, Daniel and {Mauskopf}, Philip and {Lunde}, Emily and {Ade}, Peter and {Tucker}, Carole and {Pisano}, Giampaolo and {Cox}, Erin G. and {Sabin}, Laurence and {Carrasco-Gonzalez}, Carlos and {Pasetto}, Alice and {G{\'o}mez-Ruiz}, Arturo and {Hull}, Chat and {Austermann}, Jason and {Beall}, James and {Gao}, Jiansong and {Vissers}, Michael},
-        title = "{The TolTEC camera: polarimetric commissioning and performance of the continuously rotating half-wave plate}",
-    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
-         year = 2022,
-       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
-       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
-       volume = {12190},
-        month = aug,
-          eid = {121901O},
-        pages = {121901O},
-          doi = {10.1117/12.2627725},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..1OL},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@INPROCEEDINGS{2022SPIE12190E..16L,
-       author = {{Lunde}, Emily and {Berthoud}, Marc and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joseph E. and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant W.},
-        title = "{The TolTEC camera: optical alignment and characterization}",
-    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
-         year = 2022,
-       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
-       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
-       volume = {12190},
-        month = aug,
-          eid = {1219016},
-        pages = {1219016},
-          doi = {10.1117/12.2630340},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..16L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -177,30 +177,38 @@ archivePrefix = {arXiv},
        number = {1},
           eid = {34},
         pages = {34},
+     abstract = "{We present H-band (1.65 {\ensuremath{\mu}}m) and SOFIA HAWC+ 154
+        {\ensuremath{\mu}}m polarization observations of the low-mass
+        core L483. Our H-band observations reveal a magnetic field that
+        is overwhelmingly in the E-W direction, which is approximately
+        parallel to the bipolar outflow that is observed in scattered IR
+        light and in single-dish $^{12}$CO observations. From our 154
+        {\ensuremath{\mu}}m data, we infer a
+        \raisebox{-0.5ex}\textasciitilde45{\textdegree} twist in the
+        magnetic field within the inner 5″ (1000 au) of L483. We compare
+        these new observations with published single-dish 350
+        {\ensuremath{\mu}}m polarimetry and find that the 10,000 au
+        scale H-band data match the smaller-scale 350
+        {\ensuremath{\mu}}m data, indicating that the collapse of L483
+        is magnetically regulated on these larger scales. We also
+        present high-resolution 1.3 mm Atacama Large
+        Millimeter/submillimeter Array data of L483 that reveals it is a
+        close binary star with a separation of 34 au. The plane of the
+        binary of L483 is observed to be approximately parallel to the
+        twisted field in the inner 1000 au. Comparing this result to the
+        \raisebox{-0.5ex}\textasciitilde1000 au protostellar envelope,
+        we find that the envelope is roughly perpendicular to the 1000
+        au HAWC+ field. Using the data presented, we speculate that L483
+        initially formed as a wide binary and the companion star
+        migrated to its current position, causing an extreme shift in
+        angular momentum thereby producing the twisted magnetic field
+        morphology observed. More observations are needed to further
+        test this scenario.}",
           doi = {10.3847/1538-4357/ac722a},
 archivePrefix = {arXiv},
        eprint = {2206.00683},
  primaryClass = {astro-ph.SR},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJ...932...34C},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{2021ApJ...918...39L,
-       author = {{Lee}, Dennis and {Berthoud}, Marc and {Chen}, Che-Yu and {Cox}, Erin G. and {Davidson}, Jacqueline A. and {Encalada}, Frankie J. and {Fissel}, Laura M. and {Harrison}, Rachel and {Kwon}, Woojin and {Li}, Di and {Li}, Zhi-Yun and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Santos}, Fabio P. and {Segura-Cox}, Dominique and {Stephens}, Ian},
-        title = "{HAWC+/SOFIA Polarimetry in L1688: Relative Orientation of Magnetic Field and Elongated Cloud Structure}",
-      journal = {The Astrophysical Journal},
-     keywords = {Star formation, Interstellar medium, Interstellar magnetic fields, Molecular clouds, Giant molecular clouds, 1569, 847, 845, 1072, 653, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
-         year = 2021,
-        month = sep,
-       volume = {918},
-       number = {1},
-          eid = {39},
-        pages = {39},
-          doi = {10.3847/1538-4357/ac0cf2},
-archivePrefix = {arXiv},
-       eprint = {2106.13795},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...918...39L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -215,24 +223,167 @@ archivePrefix = {arXiv},
         month = dec,
           eid = {1145302},
         pages = {1145302},
+     abstract = "{TolTEC is a three-band imaging polarimeter for the Large Millimeter
+        Telescope. Simultaneously observing with passbands at 1.1mm,
+        1.4mm and 2.0mm, TolTEC has diffraction-limited beams with FWHM
+        of 5, 7, and 11 arcsec, respectively. Over the coming decade,
+        TolTEC will perform a combination of PI-led and Open-access
+        Legacy Survey projects. Herein we provide an overview of the
+        instrument and give the first quantitative measures of its
+        performance in the lab prior to shipping to the telescope in
+        2021.}",
           doi = {10.1117/12.2562331},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..02W},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@INPROCEEDINGS{2020SPIE11452E..2OM,
-       author = {{Ma}, Zhiyuan and {McCrackan}, Michael and {DeNigris}, N.~S. and {Souccar}, Kamal and {Wilson}, Grant W. and {Horton}, Paul and {Lee}, Dennis and {Mauskopf}, Philip and {Novak}, Giles and {Rodr{\'\i}guez-Montoya}, Iv{\'a}n. and {Zaragoza-Cardiel}, Javier},
-        title = "{The TolTEC data analysis pipeline and software stack}",
-    booktitle = {Software and Cyberinfrastructure for Astronomy VI},
-         year = 2020,
-       editor = {{Guzman}, Juan C. and {Ibsen}, Jorge},
+@ARTICLE{2025ApJ...981..132C,
+       author = {{Cox}, Erin G. and {Novak}, Giles and {Chuss}, David T. and {Lee}, Dennis and {Berthoud}, Marc and {Karpovich}, Kaitlyn and {Michail}, Joseph M. and {Li}, Zhi-Yun and {Ashton}, Peter C.},
+        title = "{SOFIA Polarization Spectrum of Three Star-forming Clouds}",
+      journal = {The Astrophysical Journal},
+     keywords = {Star formation, Star forming regions, Far infrared astronomy, Polarimetry, Interstellar magnetic fields, Protostars, Young stellar objects, 1569, 1565, 529, 1278, 845, 1302, 1834, Solar and Stellar Astrophysics, Astrophysics of Galaxies},
+         year = 2025,
+        month = mar,
+       volume = {981},
+       number = {2},
+          eid = {132},
+        pages = {132},
+     abstract = "{The dust emission polarization spectrum{\textemdash}how the polarization
+        percentage changes with wavelength{\textemdash}serves as a probe
+        of dust grain properties in star-forming regions. In this paper,
+        we present 89{\textendash}214 {\ensuremath{\mu}}m polarization
+        spectrum measurements obtained from SOFIA/HAWC+ for three star-
+        forming clouds: OMC1, M17, and W3. We find that all three clouds
+        have an overall decreasing polarization percentage with
+        increasing wavelength (i.e., a ``falling polarization
+        spectrum''). We use SOFIA and Herschel data to create column
+        density and temperature maps for each cloud. We fit for the
+        slope of the polarization spectrum at each sky position in each
+        cloud, and using the Pearson r coefficient, we probe each cloud
+        for possible correlations of slope with column density and slope
+        with temperature. We also create plots of slope versus column
+        density and slope versus temperature for each cloud. For the
+        case of OMC1, our results are consistent with those presented by
+        J. Michail et al., who carried out a similar analysis for that
+        cloud. Our plots of polarization spectrum slope versus column
+        density reveal that for each cloud there exists a critical
+        column density below which a falling polarization spectrum is
+        not observed. For these more diffuse sight lines, the
+        polarization spectrum is instead flat or slightly rising. This
+        finding is consistent with a hypothesis presented 25 yr ago in a
+        paper led by R. Hildebrand based on Kuiper Airborne Observatory
+        data. This hypothesis is that regions shielded from near-IR
+        radiation are required to produce a sharply falling polarization
+        spectrum.}",
+          doi = {10.3847/1538-4357/ada447},
+archivePrefix = {arXiv},
+       eprint = {2509.13416},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...981..132C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2021ApJ...918...39L,
+       author = {{Lee}, Dennis and {Berthoud}, Marc and {Chen}, Che-Yu and {Cox}, Erin G. and {Davidson}, Jacqueline A. and {Encalada}, Frankie J. and {Fissel}, Laura M. and {Harrison}, Rachel and {Kwon}, Woojin and {Li}, Di and {Li}, Zhi-Yun and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Santos}, Fabio P. and {Segura-Cox}, Dominique and {Stephens}, Ian},
+        title = "{HAWC+/SOFIA Polarimetry in L1688: Relative Orientation of Magnetic Field and Elongated Cloud Structure}",
+      journal = {The Astrophysical Journal},
+     keywords = {Star formation, Interstellar medium, Interstellar magnetic fields, Molecular clouds, Giant molecular clouds, 1569, 847, 845, 1072, 653, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2021,
+        month = sep,
+       volume = {918},
+       number = {1},
+          eid = {39},
+        pages = {39},
+     abstract = "{We present a study of the relative orientation between the magnetic
+        field and elongated cloud structures for the {\ensuremath{\rho}}
+        Oph A and {\ensuremath{\rho}} Oph E regions in L1688 in the
+        Ophiuchus molecular cloud. Combining inferred magnetic field
+        orientation from HAWC+ 154 {\ensuremath{\mu}}m observations of
+        polarized thermal emission with column density maps created
+        using Herschel submillimeter observations, we find consistent
+        perpendicular relative alignment at scales of 0.02 pc (33''6 at
+        d {\ensuremath{\approx}} 137 pc) using the histogram of relative
+        orientations (HRO) technique. This supports the conclusions of
+        previous work using Planck polarimetry and extends the results
+        to higher column densities. Combining this HAWC+ HRO analysis
+        with a new Planck HRO analysis of L1688, the transition from
+        parallel to perpendicular alignment in L1688 is observed to
+        occur at a molecular hydrogen column density of approximately
+        10$^{21.7}$ cm$^{-2}$. This value for the alignment transition
+        column density agrees well with values found for nearby clouds
+        via previous studies using only Planck observations. Using
+        existing turbulent, magnetohydrodynamic simulations of molecular
+        clouds formed by colliding flows as a model for L1688, we
+        conclude that the molecular hydrogen volume density associated
+        with this transition is approximately
+        \raisebox{-0.5ex}\textasciitilde{}10$^{4}$ cm$^{-3}$. We discuss
+        the limitations of our analysis, including incomplete sampling
+        of the dense regions in L1688 by HAWC+.}",
+          doi = {10.3847/1538-4357/ac0cf2},
+archivePrefix = {arXiv},
+       eprint = {2106.13795},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...918...39L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2022SPIE12190E..1OL,
+       author = {{Lee}, Dennis and {Novak}, Giles and {Berthoud}, Marc and {Bussan}, John and {Golenia}, Robert and {Van Clepper}, Eric and {Wilson}, Grant and {DeNigris}, N.~S. and {Ma}, Zhiyuan and {McCrackan}, Michael and {Souccar}, Kamal and {Fissel}, Laura and {Bij}, Akanksha and {Thiel}, Felix and {Aretxaga}, Itziar and {Ferrusca}, Daniel and {Mauskopf}, Philip and {Lunde}, Emily and {Ade}, Peter and {Tucker}, Carole and {Pisano}, Giampaolo and {Cox}, Erin G. and {Sabin}, Laurence and {Carrasco-Gonzalez}, Carlos and {Pasetto}, Alice and {G{\'o}mez-Ruiz}, Arturo and {Hull}, Chat and {Austermann}, Jason and {Beall}, James and {Gao}, Jiansong and {Vissers}, Michael},
+        title = "{The TolTEC camera: polarimetric commissioning and performance of the continuously rotating half-wave plate}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
+         year = 2022,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
        series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
-       volume = {11452},
-        month = dec,
-          eid = {114522O},
-        pages = {114522O},
-          doi = {10.1117/12.2560735},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11452E..2OM},
+       volume = {12190},
+        month = aug,
+          eid = {121901O},
+        pages = {121901O},
+     abstract = "{An ambient-temperature Continuously Rotating Half-Wave Plate (CRHWP)
+        modulates the input polarization signal thereby enabling removal
+        of low-frequency (1/f) noise from polarized flux measurements.
+        This 1/f noise arises from atmospheric turbulence as well as
+        from effects intrinsic to certain detectors. Here, we describe
+        the design and performance of the half wave plate rotator and
+        achromatic half-wave plate for the the new imaging polarimeter,
+        TolTEC. These components are mounted in front of the cryostat
+        window and operate at ambient temperature. The Half-Wave Plate
+        Rotator (HWPR) spins the half-wave plate at 2 revolutions per
+        second. The rotation mechanism consists of nine air bearings to
+        provide low-friction motion and a frameless torque motor to
+        directly drive rotation. The orientation of the rotor and half-
+        wave plate are recorded using a high-precision optical encoder.
+        We review the experimental requirements and technical design of
+        the rotator as well as the associated electronics, pneumatics,
+        and software.}",
+          doi = {10.1117/12.2627725},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..1OL},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2022SPIE12189E..1HM,
+       author = {{McCrackan}, Michael and {Ma}, Zhiyuan and {DeNigris}, Nat S. and {Ryan}, Caleigh and {Souccar}, Kamal and {Wilson}, Grant W. and {Aretxaga}, Itziar and {Bij}, Akanksha and {Fissel}, Laura and {Golec}, Joseph E. and {Gutermuth}, Robert and {Lee}, Dennis and {Novak}, Giles and {Thiel}, Felix and {Walker}, Samantha and {Zaragoza-Cardiel}, Javier},
+        title = "{The TolTEC camera: the citlali data reduction pipeline engine}",
+    booktitle = {Software and Cyberinfrastructure for Astronomy VII},
+         year = 2022,
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {12189},
+        month = aug,
+          eid = {121891H},
+        pages = {121891H},
+     abstract = "{TolTEC is an imaging polarimeter installed on the Large Millimeter
+        Telescope that simultaneously images the sky at 1.1, 1.4, and
+        2.0 mm. We have developed the open-source, fully parallelized
+        C++ data reduction pipeline, citlali, to process TolTEC's raw
+        time-ordered data for science and calibration observations into
+        on-sky maps, while also performing map coaddition and post-map-
+        making analyses. Here, we describe citlali's structure,
+        including its reduction stages, algorithms, and parallelization
+        scheme. We also present the results of the application of
+        citlali to both TolTEC commissioning data and synthetic
+        observations, characterizing the resulting map properties, as
+        well as the software performance and memory usage.}",
+          doi = {10.1117/12.2629095},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12189E..1HM},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -247,7 +398,80 @@ archivePrefix = {arXiv},
         month = dec,
           eid = {114534A},
         pages = {114534A},
+     abstract = "{TolTEC is an imaging polarimeter that will be mounted on the 50m
+        diameter Large Millimeter Telescope (LMT) in Mexico. This camera
+        simultaneously images the focal plane at three wavebands
+        centered at 1.1, 1.4, and 2.0mm. TolTEC combines polarization-
+        sensitive Kinetic Inductance Detectors (KIDs) with the LMT to
+        produce 5-10 arcmin resolution maps of the sky in both total
+        intensity and polarization. The light from the telescope is
+        coupled to the TolTEC instrument using three room temperature
+        mirrors. Before entering the cryostat, the light passes through
+        a rapid-spinning achromatic half-wave plate, and once inside it
+        passes through a 1 K Lyot stop that controls the telescope
+        illumination. Inside the cryostat, a series of aluminum mirrors,
+        silicon lenses, and dichroic filters split the light into three
+        wavelength bands and direct each band to a different detector
+        array. We will describe the design, and performance of the
+        optics before installation at the telescope.}",
           doi = {10.1117/12.2562798},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..4AL},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@INPROCEEDINGS{2022SPIE12190E..16L,
+       author = {{Lunde}, Emily and {Berthoud}, Marc and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joseph E. and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant W.},
+        title = "{The TolTEC camera: optical alignment and characterization}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
+         year = 2022,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {12190},
+        month = aug,
+          eid = {1219016},
+        pages = {1219016},
+     abstract = "{The TolTEC camera is an imaging polarimeter installed at the Large
+        Millimeter Telescope (LMT) in Mexico during December 2021. This
+        new camera uses polarization-sensitive Kinetic Inductance
+        Detectors (KIDs) coupled to the 50 m LMT to produce high
+        resolution images simultaneously at 1.1, 1.4, and 2.0 mm
+        wavelengths. We present a description of the cryogenic camera
+        optics, the warm coupling optics, and the techniques used for
+        on-site alignment of TolTEC with the telescope and
+        characterization of the optics.}",
+          doi = {10.1117/12.2630340},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..16L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2020SPIE11452E..2OM,
+       author = {{Ma}, Zhiyuan and {McCrackan}, Michael and {DeNigris}, N.~S. and {Souccar}, Kamal and {Wilson}, Grant W. and {Horton}, Paul and {Lee}, Dennis and {Mauskopf}, Philip and {Novak}, Giles and {Rodr{\'\i}guez-Montoya}, Iv{\'a}n. and {Zaragoza-Cardiel}, Javier},
+        title = "{The TolTEC data analysis pipeline and software stack}",
+    booktitle = {Software and Cyberinfrastructure for Astronomy VI},
+         year = 2020,
+       editor = {{Guzman}, Juan C. and {Ibsen}, Jorge},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11452},
+        month = dec,
+          eid = {114522O},
+        pages = {114522O},
+     abstract = "{TolTEC is a new camera that will shortly be mounted on the Large
+        Millimeter Telescope (LMT). It provides simultaneous,
+        polarization-sensitive imaging at wavelengths of 1.1, 1.4 and
+        2.0 mm through its 7718 Lumped element Kinetic Inductance
+        Detectors (KIDs). The TolTEC data analysis software stack,
+        TolTECA, has been developed to facilitate the data analysis
+        tasks, producing science-ready data products for both the TolTEC
+        legacy surveys and for future principal investigator projects.
+        The software stack consists of a high performance fully
+        parallelized C++ data reduction pipeline engine citlali, and an
+        infrastructural Python package tolteca, which works at the
+        highest level, with many notable features including data product
+        management, a web-based data visualization framework, timely
+        analysis and quick-look tools for on-site observing, and a
+        TolTEC observation simulator.}",
+          doi = {10.1117/12.2560735},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11452E..2OM},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
