update with published info

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,15 +45,17 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2025arXiv250811746L,
+@ARTICLE{2025ApJ...994...61L,
        author = {{Lee}, Dennis and {Hensley}, Brandon S. and {Chang}, Tzu-Ching and {Dor{\'e}}, Olivier},
-        title = "{The End of the Road for Far-infrared Reddening Maps? Evidence for Reddening Errors Driven by Changes in PAH Abundance}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics of Galaxies},
+        title = "{The End of the Road for Far-infrared Reddening Maps? Evidence for Reddening Errors Driven by Changes in Polycyclic Aromatic Hydrocarbon Abundance}",
+      journal = {The Astrophysical Journal},
+     keywords = {Interstellar dust, Polycyclic aromatic hydrocarbons, Interstellar dust extinction, 836, 1280, 837, Astrophysics of Galaxies},
          year = 2025,
-        month = aug,
-          eid = {arXiv:2508.11746},
-        pages = {arXiv:2508.11746},
+        month = nov,
+       volume = {994},
+       number = {1},
+          eid = {61},
+        pages = {61},
      abstract = "{Accurate correction for extinction by Galactic dust is essential for
         studying the extragalactic sky. In the low-extinction regions of
         the Ursa Major molecular cloud complex, we demonstrate that
@@ -62,28 +64,31 @@ archivePrefix = {arXiv},
         abundance of polycyclic aromatic hydrocarbons (PAHs), and, as a
         result, to PAH-induced variations in reddening. Using galaxy
         counts to validate various reddening maps, we find evidence that
-        maps based on far-infrared emission erroneously under-predict
-        reddening compared to stellar reddening maps. This
-        underestimation by far-infrared emission based reddening maps --
-        representing the largest discrepancy between maps of up to
-        $E(B-V)=0.08$ mag -- is correlated with the relative brightness
-        of PAH emission. Furthermore, we demonstrate theoretically that
+        maps based on far-infrared emission erroneously underpredict
+        reddening at optical wavelengths compared to stellar reddening
+        maps. This underestimation by far-infrared emission-based
+        reddening maps{\textemdash}representing the largest discrepancy
+        between maps of up to E(B {\ensuremath{-}} V) = 0.08
+        mag{\textemdash}is correlated with the relative brightness of
+        PAH emission. Furthermore, we demonstrate theoretically that
         changes in PAH abundance via accretion from the gas phase is
         capable of altering extinction significantly with only minor
         changes to far-infrared emission. We show that modeling the
         extinction of Ursa Major using both far-infrared and mid-
         infrared emission more accurately traces dust extinction
         variations due to changes in PAH abundance. Finally, we discuss
-        how SPHEREx observations of the 3.3 $μ$m PAH feature are a
-        promising way to overcome this limitation of far-infrared
-        emission.}",
-          doi = {10.48550/arXiv.2508.11746},
+        how SPHEREx observations of the 3.3 {\ensuremath{\mu}}m PAH
+        feature are a promising way to overcome this limitation of far-
+        infrared emission.}",
+          doi = {10.3847/1538-4357/ae0c12},
 archivePrefix = {arXiv},
        eprint = {2508.11746},
  primaryClass = {astro-ph.GA},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250811746L},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...994...61L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
 
 @ARTICLE{2024ApJ...968..101E,
        author = {{Encalada}, Frankie J. and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Cox}, Erin G. and {Pereira-Santos}, Fabio and {Lee}, Dennis and {Harrison}, Rachel and {Pattle}, Kate},
