--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,20 @@
+@ARTICLE{2026arXiv260212331L,
+       author = {{Lee}, Dennis and {Hensley}, Brandon S. and {Chang}, Tzu-Ching and {Dor{\'e}}, Olivier},
+        title = "{Searching for the Shortest-wavelength Aromatic Infrared Bands: No Evidence for the Predicted 1.05 $μ$m Polycyclic Aromatic Hydrocarbon Feature}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics of Galaxies},
+         year = 2026,
+        month = feb,
+          eid = {arXiv:2602.12331},
+        pages = {arXiv:2602.12331},
+          doi = {10.48550/arXiv.2602.12331},
+archivePrefix = {arXiv},
+       eprint = {2602.12331},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2026arXiv260212331L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{2024ApJ...975..267B,
        author = {{Bij}, Akanksha and {Fissel}, Laura M. and {Bonne}, Lars and {Schneider}, Nicola and {Berthoud}, Marc and {Lee}, Dennis and {Novak}, Giles A. and {Sadavoy}, Sarah I. and {Pillai}, Thushara G.~S. and {Cunningham}, Maria and {Jones}, Paul and {Simon}, Robert},
         title = "{Magnetic Field Alignment Relative to Multiple Tracers in the High-mass Star-forming Region RCW 36}",
